5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4074/executions/1578_1328.log
== SUBMITION (2019-03-12 11:31:27) 
-- CODE:
Print(20*35=)
-- EXECUTION TIME:
0.11882
-- ERROR:
  File "/home/codebench/codes/1578/1328/main.py", line 1
    Print(20*35=)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:31:58) 
-- CODE:
Print(20 * 35=)
-- ERROR:
File "XXXX", line 1
    Print(20 * 35=)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:32:32) 
-- CODE:
print(20*35=)
-- EXECUTION TIME:
0.196164
-- ERROR:
  File "/home/codebench/codes/1578/1328/main.py", line 1
    print(20*35=)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:32:40) 
-- CODE:
print(20 * 35=)
-- ERROR:
File "XXXX", line 1
    print(20 * 35=)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:33:45) 
-- CODE:
print(20*35 =)
-- ERROR:
File "XXXX", line 1
    print(20*35 =)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:34:17) 
-- CODE:
print(35*20=)
-- ERROR:
File "XXXX", line 1
    print(35*20=)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:35:13) 
-- CODE:
print(20*35,0=)
-- EXECUTION TIME:
0.132883
-- ERROR:
  File "/home/codebench/codes/1578/1328/main.py", line 1
    print(20*35,0=)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:35:28) 
-- CODE:
print(20*3=)
-- ERROR:
File "XXXX", line 1
    print(20*3=)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:35:52) 
-- CODE:
print(20*35=700)
-- ERROR:
File "XXXX", line 1
    print(20*35=700)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:36:04) 
-- CODE:
print(20*35=x)
-- EXECUTION TIME:
0.142295
-- ERROR:
  File "/home/codebench/codes/1578/1328/main.py", line 1
    print(20*35=x)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:36:50) 
-- CODE:
print(20*35)
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:37:01) 
-- CODE:
print(20*35)
-- EXECUTION TIME:
0.221918
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
